# own-master

./: .gitignore  CMakeLists.txt
chatserver/: CMakeLists.txt  vcpkg.json
chatserver/header/: AsioIOServicePool.h  CServer.h  CSession.h  ChatGrpcClient.h  ChatServiceImpl.h  ConfigMgr.h  LogicSystem.h  MysqlDao.h  RedisMgr.h  StatusGrpcClient.h  const.h
chatserver/src/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  DistLock.cpp  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  UserMgr.cpp
client/chat/: chat.pro  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.ui  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h
client/chat/style/: stylesheet.qss
gateserver/: README.md  vcpkg.json
gateserver/header/: CServer.h  VarifyGrpcClient.h
gateserver/src/: GateServer.cpp  VarifyGrpcClient.cpp  message.pb.cc
header/: AsioIOServicePool.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  const.h  message.pb.h
src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp
statusserver/: CMakeLists.txt  message.proto  vcpkg.json
statusserver/header/: AsioIOServicePool.h  ChatGrpcClient.h  ConfigMgr.h  MysqlDao.h  RedisMgr.h  const.h  message.pb.h
statusserver/src/: AsioIOServicePool.cpp  ConfigMgr.cpp  MysqlDao.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  message.pb.cc
